# audio-mixer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md  DEPENDENCIES.md
include/: audio_interface.h  config.h.in  mixer_types.h  protocol.h  shared_state.h
src/cli/: CMakeLists.txt  launcher.c
src/core/: channels.c  daemon.c  mixer.c  ringbuffer.c  routing.c
src/gui/: CMakeLists.txt  drag_drop.c  main_gui.c  ui_renderer.c
src/ipc/: client.c  server.c
src/platform/macos/: CMakeLists.txt  app_capture.c  coreaudio.c
src/platform/windows/: CMakeLists.txt  app_capture.c  wasapi.c
src/tui/: CMakeLists.txt  channel_view.c  main_tui.c  meters.c  routing_view.c
